syntax = "proto3";

// option java_multiple_files = true;
// option java_package = "io.grpc.examples.helloworld";
// option java_outer_classname = "HelloWorldProto";
// option objc_class_prefix = "HLW";

package user;

// The greeting service definition.
service User {
  // Sends a greeting
  rpc createUser (UserRequest) returns (UserReply) {}
  rpc updateUser (UpdateRequest) returns (UserReply) {}
  rpc getUser (UserRequest) returns (UserReply) {}
}

message UpdateRequest {
  string email = 1;
  string name = 2;
  repeated string friends = 3;
  repeated string lists = 4;
}
// The request message containing the user's name.
message UserRequest {
  string name = 1;
  string email = 2;
}

// The response message containing the greetings
message UserReply {
  string message = 1;
}
